--- a/.env
+++ b/.env
@@ -1,55 +1,29 @@
-
-REST_PORT=2229
-GO_ENV=development
-
-# DB_HOST=10.10.86.142
-# DB_PORT=5432
-# DB_USER=postgres
-# DB_PASS=Password*1!
-# DB_NAME=metaforce_prod_clone5
-# DB_SSL=disable
-# DB_SSLMODE=disable
-DB_HOST=10.10.86.142
+VERSION= 1.0.0
+REST_PORT=2228
+GO_ENV=production
+SWAGGER_HOST=innodev.vnetcloud.com/crm-ticket
+DB_HOST=10.254.213.3
 DB_PORT=5959
 DB_USER=postgres
-DB_PASS=HujanTanah@2024!
-DB_NAME=mf_dev
-DB_SSL=disable
+DB_PASS=&Mer4h&B4t4&
+DB_NAME=metaforce_prod
 DB_SSLMODE=disable
-
-# MONGO_USER=root
-# MONGO_PASS=Password1!
-# MONGO_HOST=10.10.86.142
-# MONGO_PORT=27017
-# MONGO_DB=mf_devel
-# MONGO_SSL=disable
-# MONGO_AUTH=admin
-MONGO_USER=goodtime
-MONGO_PASS=HujanAir!2024!
-MONGO_HOST=10.10.86.142
-MONGO_PORT=27017
-MONGO_DB=metaforce_dev
+TIMEZONE=Asia/Jakarta
+MONGO_USER=mongoAdmin
+MONGO_PASS=&Mer4h&Mud4&
+MONGO_HOST=10.254.213.3
+MONGO_PORT=4949
+MONGO_DB=metaforce_prod
 MONGO_SSL=disable
 MONGO_AUTH=admin
-
-DOMAIN_IMAGE=http://innodev.vnetcloud.com/metaforce-public-photo
-SWAGGER_HOST=localhost:2229
-
-TIMEZONE=Asia/Jakarta
-
 JWT_SECRET=metaforceverysecret
-
-
-# MINIO_HOST=10.10.86.142:9002
-# MINIO_ACCESS_KEY=ccdyYCPJSCj4IxYb
-# MINIO_SECRET_KEY=Ao32wby8ZSHhDmqOeCVWYcIiGcHKTMnt
-# MINIO_LOCATION=us-east-1
-# MINIO_SSL=false
-# MINIO_DOMAIN=https://minio-innodev.vnetcloud.com
-
-MINIO_HOST=10.10.86.142:10002
-MINIO_ACCESS_KEY=idvpk5tOQS8IPYiJH5Ok
-MINIO_SECRET_KEY=L4otYYUL0FZJcseTiFX5y08PFZYVEnHRLU0gdN4k
+MINIO_HOST=10.254.212.5:9002
+MINIO_ACCESS_KEY=ccdyYCPJSCj4IxYb
+MINIO_SECRET_KEY=Ao32wby8ZSHhDmqOeCVWYcIiGcHKTMnt
 MINIO_LOCATION=us-east-1
 MINIO_SSL=false
-MINIO_DOMAIN=https://innodev.vnetcloud.com/kong/em_minio_dev
+MINIO_DOMAIN=https://apigw.vnetcloud.com/minio_dev
+#DOMAIN_IMAGE=https://apigw.vnetcloud.com/1_6_5_prd_mf_mobile
+#DOMAIN_IMAGE=http://127.0.0.1:81
+#DOMAIN_IMAGE=localhost:81
+DOMAIN_IMAGE=http://10.254.210.32:81
