--- a/.env
+++ b/.env
@@ -26,4 +26,5 @@ MINIO_DOMAIN=https://apigw.vnetcloud.com/minio_dev
 #DOMAIN_IMAGE=https://apigw.vnetcloud.com/1_6_5_prd_mf_mobile
 #DOMAIN_IMAGE=http://127.0.0.1:81
 #DOMAIN_IMAGE=localhost:81
-DOMAIN_IMAGE=http://10.254.210.32:81
+# DOMAIN_IMAGE=http://10.254.210.32:81
+DOMAIN_IMAGE=http://10.254.212.5:81
